--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A basic reddit search application using fetch.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "parcel index.html",
+    "parcel" : "parcel index.html"
   },
   "author": "Akash Chouhan",
   "license": "ISC"
